--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,17 @@ jobs:
         echo "Deployment script or commands go here"
         ls
         cd ../
+        echo "Deployment script or commands go here"
         ls
         cd ../
+        echo "Deployment script or commands go here"
         ls 
         cd ../
+        echo "Deployment script or commands go here"
         ls
         cd ../
+        echo "Deployment script or commands go here"
         ls
         cd ../
+        echo "Deployment script or commands go here"
         ls
