--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-   "version": 2,
-   "name": "Weather App",
-   "builds": [
-      { "src": "./app.js", 
-      "use": "@vercel/node" }
-   ],
-   "routes": [
-      { "src": "/(.*)", "dest": "/" }
-   ]
+  "version": 2,
+  "name": "Weather App",
+  "builds": [
+    {
+      "src": "./app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/app.js"
+    }
+  ]
 }
