--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0-beta1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "dotenv": "16.4.5"
   }
 }
